{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 646,
  "lineage": "d8b8f24e-efc4-7393-3bea-079a6558bf04",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:482352877046:loadbalancer/app/konecta-ass1-dev-alb/580c5cbe694fee49",
            "arn_suffix": "app/konecta-ass1-dev-alb/580c5cbe694fee49",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "konecta-ass1-dev-alb-1597076234.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:482352877046:loadbalancer/app/konecta-ass1-dev-alb/580c5cbe694fee49",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "konecta-ass1-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-025fd24594fd3a630"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c5a981ca7567ec66"
              },
              {
                "subnet_id": "subnet-0db059bd18973c28f"
              }
            ],
            "subnets": [
              "subnet-0c5a981ca7567ec66",
              "subnet-0db059bd18973c28f"
            ],
            "vpc_id": "vpc-0026d7223fc14e08b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:482352877046:listener/app/konecta-ass1-dev-alb/580c5cbe694fee49/51b46c0da2de37ac",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:482352877046:targetgroup/konecta-ass1-dev-frontend-tg/4b28a2bdeb516120",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:482352877046:listener/app/konecta-ass1-dev-alb/580c5cbe694fee49/51b46c0da2de37ac",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:482352877046:loadbalancer/app/konecta-ass1-dev-alb/580c5cbe694fee49",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_target_group.frontend",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:482352877046:targetgroup/konecta-ass1-dev-frontend-tg/4b28a2bdeb516120",
            "arn_suffix": "targetgroup/konecta-ass1-dev-frontend-tg/4b28a2bdeb516120",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:482352877046:targetgroup/konecta-ass1-dev-frontend-tg/4b28a2bdeb516120",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "konecta-ass1-dev-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0026d7223fc14e08b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:security-group/sg-025fd24594fd3a630",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025fd24594fd3a630",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "konecta-ass1-dev-alb-sg-20251129204948694500000002",
            "name_prefix": "konecta-ass1-dev-alb-sg-",
            "owner_id": "482352877046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "konecta-ass1-dev-alb-sg"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026d7223fc14e08b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:security-group/sg-02ef36c594110d4fc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ef36c594110d4fc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07072330eebebd6b7"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "konecta-ass1-dev-backend-ecs-sg-20251129204957829100000005",
            "name_prefix": "konecta-ass1-dev-backend-ecs-sg-",
            "owner_id": "482352877046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "konecta-ass1-dev-backend-ecs-sg"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-backend-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026d7223fc14e08b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.frontend_ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:security-group/sg-07072330eebebd6b7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07072330eebebd6b7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025fd24594fd3a630"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "konecta-ass1-dev-frontend-ecs-sg-20251129204953214900000004",
            "name_prefix": "konecta-ass1-dev-frontend-ecs-sg-",
            "owner_id": "482352877046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "konecta-ass1-dev-frontend-ecs-sg"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-frontend-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026d7223fc14e08b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:security-group/sg-0483768090a5137ee",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0483768090a5137ee",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02ef36c594110d4fc"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "konecta-ass1-dev-rds-sg-20251129205002333900000012",
            "name_prefix": "konecta-ass1-dev-rds-sg-",
            "owner_id": "482352877046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "konecta-ass1-dev-rds-sg"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026d7223fc14e08b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.backend_ecs",
            "module.security_groups.aws_security_group.frontend_ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0451a25e5aedfd872",
            "arn": "arn:aws:ec2:us-east-1:482352877046:elastic-ip/eipalloc-0451a25e5aedfd872",
            "domain": "vpc",
            "id": "eipalloc-0451a25e5aedfd872",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-226-133-231.compute-1.amazonaws.com",
            "public_ip": "34.226.133.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "konecta-ass1-dev-eip-nat-1"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-eip-nat-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1525361c6f8b691",
            "arn": "arn:aws:ec2:us-east-1:482352877046:elastic-ip/eipalloc-0f1525361c6f8b691",
            "domain": "vpc",
            "id": "eipalloc-0f1525361c6f8b691",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-223-230-190.compute-1.amazonaws.com",
            "public_ip": "3.223.230.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "konecta-ass1-dev-eip-nat-2"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-eip-nat-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:internet-gateway/igw-02d7c1a4edac16445",
            "id": "igw-02d7c1a4edac16445",
            "owner_id": "482352877046",
            "tags": {
              "Name": "konecta-ass1-dev-igw"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-igw"
            },
            "vpc_id": "vpc-0026d7223fc14e08b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0451a25e5aedfd872",
            "association_id": "eipassoc-05f2bdebc6fef23d1",
            "connectivity_type": "public",
            "id": "nat-01a3674d2097f8959",
            "network_interface_id": "eni-05e39d7a94f5b2637",
            "private_ip": "10.0.1.250",
            "public_ip": "34.226.133.231",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0db059bd18973c28f",
            "tags": {
              "Name": "konecta-ass1-dev-nat-1"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1525361c6f8b691",
            "association_id": "eipassoc-08de023aeb6b1387c",
            "connectivity_type": "public",
            "id": "nat-006baefa9254ae16c",
            "network_interface_id": "eni-0b02273538fc2382e",
            "private_ip": "10.0.2.167",
            "public_ip": "3.223.230.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c5a981ca7567ec66",
            "tags": {
              "Name": "konecta-ass1-dev-nat-2"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:route-table/rtb-099ec04c4db2ffd72",
            "id": "rtb-099ec04c4db2ffd72",
            "owner_id": "482352877046",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01a3674d2097f8959",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "konecta-ass1-dev-private-rt-1"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026d7223fc14e08b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:route-table/rtb-05457f7c609ba1ccb",
            "id": "rtb-05457f7c609ba1ccb",
            "owner_id": "482352877046",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-006baefa9254ae16c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "konecta-ass1-dev-private-rt-2"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026d7223fc14e08b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:route-table/rtb-0f3badf7660af7df7",
            "id": "rtb-0f3badf7660af7df7",
            "owner_id": "482352877046",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d7c1a4edac16445",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "konecta-ass1-dev-public-rt"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0026d7223fc14e08b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d09ee0c28d348c91",
            "route_table_id": "rtb-099ec04c4db2ffd72",
            "subnet_id": "subnet-0479b1cae4d78fd3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09677f9e747670041",
            "route_table_id": "rtb-05457f7c609ba1ccb",
            "subnet_id": "subnet-06695f485f2dd59de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083f64c98be8740e4",
            "route_table_id": "rtb-0f3badf7660af7df7",
            "subnet_id": "subnet-0db059bd18973c28f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2eeebcd39d0283d",
            "route_table_id": "rtb-0f3badf7660af7df7",
            "subnet_id": "subnet-0c5a981ca7567ec66"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:subnet/subnet-0479b1cae4d78fd3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0479b1cae4d78fd3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482352877046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konecta-ass1-dev-private-1"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-private-1"
            },
            "vpc_id": "vpc-0026d7223fc14e08b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:subnet/subnet-06695f485f2dd59de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06695f485f2dd59de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482352877046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konecta-ass1-dev-private-2"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-private-2"
            },
            "vpc_id": "vpc-0026d7223fc14e08b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:subnet/subnet-0db059bd18973c28f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db059bd18973c28f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "482352877046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konecta-ass1-dev-public-1"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-public-1"
            },
            "vpc_id": "vpc-0026d7223fc14e08b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:subnet/subnet-0c5a981ca7567ec66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5a981ca7567ec66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "482352877046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konecta-ass1-dev-public-2"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-public-2"
            },
            "vpc_id": "vpc-0026d7223fc14e08b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:vpc/vpc-0026d7223fc14e08b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008fae4fbe1d756fe",
            "default_route_table_id": "rtb-00bbdacd03ae2e664",
            "default_security_group_id": "sg-0325763848c2bb98a",
            "dhcp_options_id": "dopt-0c28fec763ea0a635",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0026d7223fc14e08b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00bbdacd03ae2e664",
            "owner_id": "482352877046",
            "tags": {
              "Name": "konecta-ass1-dev-vpc"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}